@startuml ICS372_Project_UML

!theme plain

' Main Application Classes
class Launcher {
    +main(String[] args)
}

class OrderTrackingApp {
    -APP_TITLE: String
    -WINDOW_WIDTH: int
    -WINDOW_HEIGHT: int
    +start(Stage primaryStage)
    +main(String[] args)
}

class OrderTrackingController {
    -DATE_FORMATTER: DateTimeFormatter
    -pendingOrders: ObservableList<Order>
    -inProgressOrders: ObservableList<Order>
    -completedOrders: ObservableList<Order>
    -currentItems: ObservableList<Item>
    -orderToFileMap: Map<Order, String>
    -autoRefreshEnabled: boolean
    +initialize()
    +handleStartOrder()
    +handleCompleteOrder()
    +handleUndoStart()
    +handleUndoComplete()
    +handleDeletePendingOrder()
    +handleDeleteInProgressOrder()
    +handleDeleteCompletedOrder()
    +handleRefresh()
    +handleToggleAutoRefresh()
    -setupOrderTables()
    -setupItemsTable()
    -setupEventHandlers()
    -startFileWatcher()
    -loadOrders()
    -showOrderDetails(Order order)
    -saveOrderState()
    -loadSavedOrderState()
}

' Data Model Classes
class Order {
    -type: String
    -order_date: long
    -items: List<Item>
    -source: String
    -status: OrderStatus
    +getType(): String
    +setType(String type)
    +getOrder_date(): long
    +setOrder_date(long order_date)
    +getItems(): List<Item>
    +setItems(List<Item> items)
    +getSource(): String
    +setSource(String source)
    +getStatus(): OrderStatus
    +setStatus(OrderStatus status)
    +calculateTotal(): double
    +isValid(): boolean
    +toString(): String
    +equals(Object obj): boolean
    +hashCode(): int
}

enum OrderStatus {
    PENDING
    IN_PROGRESS
    COMPLETED
}

class Item {
    -name: String
    -quantity: int
    -price: double
    +getName(): String
    +setName(String name)
    +getQuantity(): int
    +setQuantity(int quantity)
    +getPrice(): double
    +setPrice(double price)
    +getLineTotal(): double
    +toString(): String
}

' Data Import/Export Classes
class OrderIn {
    -mapper: ObjectMapper
    -processedFiles: Set<String>
    -watchService: WatchService
    -isWatching: boolean
    -listeners: List<OrderUpdateListener>
    +readOrder(String filename): Optional<Order>
    +readOrdersFromDirectory(String directoryPath): List<Order>
    +startFileWatcher(String directoryPath)
    +startPollingWatcher(String directoryPath)
    +stopFileWatcher()
    +addOrderUpdateListener(OrderUpdateListener listener)
    +removeOrderUpdateListener(OrderUpdateListener listener)
    -readOrderFromJson(String filename): Optional<Order>
    -readOrderFromXml(String filename): Optional<Order>
    -readAllOrdersFromXml(String filename): List<Order>
    -notifyNewOrders(List<Order> newOrders)
    -notifyReloadAllOrders(List<Order> allOrders)
}

class OrderWrapper {
    -order: Order
    +getOrder(): Order
    +setOrder(Order order)
}

interface OrderUpdateListener {
    +onOrdersUpdated(List<Order> newOrders)
    +onOrdersReloaded(List<Order> allOrders)
}

class XmlOrderImporter {
    -DATE_FORMATTERS: DateTimeFormatter[]
    +importFromXml(String filePath): ImportResult
    +importFromDirectory(String directoryPath): List<ImportResult>
    -parseOrderElement(Element orderElement): Order
    -parseItems(Element orderElement): List<Item>
    -parseItemElement(Element itemElement): Item
    -getElementText(Element parent, String tagName): String
    -getElementTextWithFallbacks(Element parent, String... fallbacks): String
    -parseQuantity(String quantityStr): int
    -parsePrice(String priceStr): double
    -parseDate(String dateStr): long
    -parseTimestamp(String dateStr): long
    -parseWithFormatter(String dateStr, DateTimeFormatter formatter): long
    -findElementContainer(Element parent, String... containerNames): Element
    -createDefaultItem(): Item
}

class ImportResult {
    -importedOrders: List<Order>
    -errors: List<String>
    -sourceFile: String
    +getImportedOrders(): List<Order>
    +getErrors(): List<String>
    +getSourceFile(): String
    +hasErrors(): boolean
    +getSuccessCount(): int
    +getErrorCount(): int
}

' Persistence Classes
class OrderPersistence {
    -mapper: ObjectMapper
    -PERSISTENCE_FILE: String
    -CANCELED_ORDERS_FILE: String
    +saveOrderState(List<Order> pendingOrders, List<Order> inProgressOrders, List<Order> completedOrders): boolean
    +loadOrderState(): Optional<OrderState>
    +hasSavedState(): boolean
    +clearSavedState()
    +saveCanceledOrder(Order order): boolean
    +loadCanceledOrders(): List<Order>
    +hasCanceledOrders(): boolean
    +clearCanceledOrders()
}

class OrderState {
    -pendingOrders: List<Order>
    -inProgressOrders: List<Order>
    -completedOrders: List<Order>
    +getPendingOrders(): List<Order>
    +setPendingOrders(List<Order> pendingOrders)
    +getInProgressOrders(): List<Order>
    +setInProgressOrders(List<Order> inProgressOrders)
    +getCompletedOrders(): List<Order>
    +setCompletedOrders(List<Order> completedOrders)
}

' Relationships
Launcher --> OrderTrackingApp : creates
OrderTrackingApp --> OrderTrackingController : FXML controller
OrderTrackingController --> Order : manages
OrderTrackingController --> Item : displays
OrderTrackingController --> OrderPersistence : uses
OrderTrackingController --> OrderIn : uses
OrderTrackingController .|> OrderUpdateListener : implements

Order "1" *-- "1..*" Item : contains
Order --> OrderStatus : uses

OrderIn --> Order : creates
OrderIn --> OrderWrapper : uses
OrderIn --> XmlOrderImporter : uses
OrderIn --> OrderUpdateListener : notifies

XmlOrderImporter --> Order : creates
XmlOrderImporter --> Item : creates
XmlOrderImporter --> ImportResult : returns

OrderPersistence --> OrderState : manages
OrderPersistence --> Order : persists

OrderWrapper --> Order : wraps

' Notes
note right of OrderTrackingController
Main UI controller
Manages three order tables:
- Pending Orders
- In-Progress Orders
- Completed Orders

Handles file watching
and auto-refresh
end note

note right of OrderIn
Handles file system watching
Supports both JSON and XML
Implements observer pattern
for real-time updates
end note

note right of XmlOrderImporter
Robust XML parser with
fallback field names and
multiple date format support
end note

note right of OrderPersistence
JSON-based persistence
Saves application state
and canceled orders
end note

@enduml